packages/errors/test/__snapshots__/NO_DEFAULT_CONFIG_FILE_FOUND.ansi
[31mCould not find a Cypress configuration file in this folder: [94m/path/to/project/root[39m[31m[39m